<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:icon="@mipmap/ic_launcher"
        android:title="@string/settings"/>

    <Preference
        android:icon="@drawable/ic_picture"
        android:key="setWallpaper"
        android:summary="@string/tap_to_preview"
        android:title="@string/set_live_wallpaper"/>

    <PreferenceCategory android:title="@string/information">
        <Preference
            android:icon="@drawable/ic_infor"
            android:summary="@string/version"
            android:title="@string/about" />
        <Preference
            android:icon="@drawable/ic_rate"
            android:key="Rate"
            android:summary="@string/rate_app"
            android:title="@string/rate" />
        <Preference
            android:icon="@drawable/ic_share"
            android:key="share"
            android:summary="@string/share_with_friend"
            android:title="@string/share" />
    </PreferenceCategory>
</PreferenceScreen>